--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "lucide": "^0.473.0",
     "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
