--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^11.18.1",
     "lucide": "^0.473.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-responsive": "^10.0.0"
+    "react-hook-form": "^7.54.2",
+    "react-responsive": "^10.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
