--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
     "lucide": "^0.473.0",
     "next": "15.1.5",
@@ -18,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-responsive": "^10.0.0",
+    "sonner": "^1.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
