--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+   "start": "nodemon src/index.ts",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
